// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/admin_console/request_button/request_button.jsx should match snapshot 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
          type="button"
        >
          <span
            class="_button__label_doayp_24"
          >
            Button Text
          </span>
        </button>
      </div>
      <div
        class="help-text"
      >
        Help Text
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with request error 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
          type="button"
        >
          <span
            class="_button__label_doayp_24"
          >
            Button Text
          </span>
        </button>
        <div>
          <div
            class="alert alert-warning"
          >
            <i
              class="fa fa-warning"
              title="Warning Icon"
            />
            Error Message: __message__ - __detailed_error__
          </div>
        </div>
      </div>
      <div
        class="help-text"
      >
        Help Text
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with request error 2`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
          type="button"
        >
          <span
            class="_button__label_doayp_24"
          >
            Button Text
          </span>
        </button>
        <div>
          <div
            class="alert alert-warning"
          >
            <i
              class="fa fa-warning"
              title="Warning Icon"
            />
            Error Message: __message__
          </div>
        </div>
      </div>
      <div
        class="help-text"
      >
        Help Text
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with successMessage 1`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
          type="button"
        >
          <span
            class="_button__label_doayp_24"
          >
            Button Text
          </span>
        </button>
        <div>
          <div
            class="alert alert-success"
          >
            <i
              class="fa fa-check"
              title="Success Icon"
            />
            Success Message
          </div>
        </div>
      </div>
      <div
        class="help-text"
      >
        Help Text
      </div>
    </div>
  </div>
</div>
`;

exports[`components/admin_console/request_button/request_button.jsx should match snapshot with successMessage 2`] = `
<div>
  <div
    class="form-group"
  >
    <div
      class="col-sm-offset-4 col-sm-8"
    >
      <div>
        <button
          class="_button_doayp_2 _button--emphasis-tertiary_doayp_91 _button--size-medium_doayp_47"
          type="button"
        >
          <span
            class="_button__label_doayp_24"
          >
            Button Text
          </span>
        </button>
      </div>
      <div
        class="help-text"
      >
        Help Text
      </div>
    </div>
  </div>
</div>
`;
